# caravels

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  run-loop-diagrams.md  settings.competition.json  settings.json  settings.paper.json
caravels/: __init__.py  __main__.py  app.py  bnb.py  cmc.py  competition.py  compliance.py  config.py  db.py  execution.py  indicators.py  ladder.py  llm.py  models.py  receipt.py  regime.py  risk.py  run.py  scoring.py  signal.py  twak.py  tx_confirmation.py
caravels/static/: dashboard.css
caravels/strategies/: __init__.py  breakout.py  guards.py  llm_oneshot.py  mean_reversion.py  momentum_rebalance.py  registry.py  trend_following.py  volatility_target.py
caravels/templates/: index.html
scripts/: register.py
tests/: conftest.py  test_competition_ops.py  test_compliance.py  test_grid_skill.py  test_ladder.py  test_multi_action.py  test_receipt.py  test_regime.py  test_risk.py  test_signal_agentic.py  test_skill.py
track2/: README.md  backtest.py  grid_backtest.py  grid_skill.py  skill.py
